test/good/classes/struct06.px

class A def
    x: [Rat] = [6]

a = A()
a.x[0] /= 4
print a.x
